--- a/_posts/2018-07-14-celiac.markdown
+++ b/_posts/2018-07-14-celiac.markdown
@@ -48,3 +48,5 @@ With a reference to my favorite Otto Preminger movie, and being recently glutene
 # Conclusion
 
 Now that I've seen the effects of glutening for over a year, I'm able to know precily when it's coming and adapt accordingly.  At this point, the symptoms happen on a very predictable schedule, and I've learned to identify them and know what's happening.  Knowing what's happening is the first step towards not letting it get you down, and having a timeline is useful in knowing precisely what will happen when, what to expect, and how to deal with feeling better in a more controlled way.  Unfortunately, once it happens, there's not much you can do and so you have to just ride it out until you will feel better.
+
+The scariest part of this whole experience is how every time you make a a mistake, you're literally reducing your own life.  Even if you order gluten-free and get served gluten (which, has happened multiple times in Seattle.)  Sometimes, you feel so shitty that you forget that one small mistake is slowly eating away at your intestines and there's nothing you can do; it's hard, bceause you are so concentrated in feeling better in the moment, that you forget the long term effects.
