--- a/_posts/2018-07-14-celiac.markdown
+++ b/_posts/2018-07-14-celiac.markdown
@@ -45,8 +45,12 @@ With a reference to my favorite Otto Preminger movie, and being recently glutene
 
 * I barely remember what happened during the period where I was affected.  I remember major events that happend, but if I try to recall specifics about what I did during the period I was feeling really awful, I can't.
 
-# Conclusion
+# Implications
 
 Now that I've seen the effects of glutening for over a year, I'm able to know precily when it's coming and adapt accordingly.  At this point, the symptoms happen on a very predictable schedule, and I've learned to identify them and know what's happening.  Knowing what's happening is the first step towards not letting it get you down, and having a timeline is useful in knowing precisely what will happen when, what to expect, and how to deal with feeling better in a more controlled way.  Unfortunately, once it happens, there's not much you can do and so you have to just ride it out until you will feel better.
 
 The scariest part of this whole experience is how every time you make a a mistake, you're literally reducing your own life.  Even if you order gluten-free and get served gluten (which, has happened multiple times in Seattle.)  Sometimes, you feel so shitty that you forget that one small mistake is slowly eating away at your intestines and there's nothing you can do; it's hard, bceause you are so concentrated in feeling better in the moment, that you forget the long term effects.
+
+# Conclusion
+
+In retrospect, I've relized that lots of the failed relationships and problems I've had with people has been related to gluten.  It overwhelms my life.  I spent many years dealing with these effects before I identified it was the issue.  I was moody, depressive, problematic, but now that I've understood the problem, I've at least learned to identify it, harness it, deal with it.  I've learned to avoid major decisions when I've been glutened; I've learned to avoid confrontations when I've been glutened.  Gluten overwhelms my life and I work increasingly hard to avoid it.  My easily broken foot: probably gluten.  I have weak bones, I have a weak immune system, I have a weak emotional tolerance.  It controls and orchestrates everything.  I have to work doubly hard to avoid it.  I do, but sometimes I fail.  It's not easy.  Gluten-free only gets you so far.  Conferences, travel, all pose risks.  I'm only safe at home when I can control every single ingredient, every single step of preparation.  It's a chore, but, it's the hand I've been dealt.
