--- a/_posts/2018-12-15-ambrosia.markdown
+++ b/_posts/2018-12-15-ambrosia.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "High performance, exactly-once, failure oblivious distributed programming with Ambrosia"
+title:  "High performance, exactly-once, failure oblivious distributed programming with AMBROSIA"
 date:   2018-12-15 00:00:00 -0000
 categories: pl
 group: pl
