--- a/_posts/2018-12-15-ambrosia.markdown
+++ b/_posts/2018-12-15-ambrosia.markdown
@@ -8,9 +8,10 @@ group: pl
 
 _This is one post in a series about programming models and languages for distributed computing that I'm writing as part of my [history of distributed programming techniques](https://github.com/cmeiklejohn/PMLDC)._
 
-
 <h2 id="relevant-reading">Relevant Reading</h2>
 <ul>
+<li><p><em>Trill: A high-performance incremental query processor for diverse analytics</em>, Chandramouli et al., VLDB 2014 <span class="citation">Chandramouli et al. (2014)</span></p></li>
+<li><p><em>Quill: efficient, transferable, and rich analytics at scale</em>, Chandramouli et al., VLDB 2016 <span class="citation">Chandramouli et al. (2016)</span></p></li>
 <li><p><em>Ambrosia: Providing Performant Virtual Resiliency for Distributed Applications</em>, Goldstein et al., MSR-TR-2018-40 <span class="citation">Goldstein et al. (2018)</span></p></li>
 </ul>
 <h2 id="commentary">Commentary</h2>
@@ -44,6 +45,12 @@ _This is one post in a series about programming models and languages for distrib
 <p>To achieve high performance, a combination of adaptive batching – which ensures low latency under both light and heavy workloads is used for message transmission between nodes. These batches are accumulated in buffers that are concurrently written to and flushed using a shared buffer pool – both techniques seen in high-performance systems such as Trill and Quill. Batch commit is used to deliver applications to both the log and application for processing from the system itself to keep latency low.</p>
 <p>We refer the interested reader to the paper for the full experimental evaluation, but we can say the results are amazing: 12.7X improvement compared to gRPC, despite gRPC having no failure protection mechanism and 100x improvement in cost per unit served compared to stateless compute using serverless and existing exactly-once strategies.</p>
 <div id="refs" class="references">
+<div id="ref-chandramouli2016quill">
+<p>Chandramouli, Badrish, Raul Castro Fernandez, Jonathan Goldstein, Ahmed Eldawy, and Abdul Quamar. 2016. “The Quill Distributed Analytics Library and Platform.” Technical report, Microsoft Research (MSR-TR-2016-25). http://aka. ms/quill-tr.</p>
+</div>
+<div id="ref-chandramouli2014trill">
+<p>Chandramouli, Badrish, Jonathan Goldstein, Mike Barnett, Robert DeLine, Danyel Fisher, John C Platt, James F Terwilliger, and John Wernsing. 2014. “Trill: A High-Performance Incremental Query Processor for Diverse Analytics.” <em>Proceedings of the VLDB Endowment</em> 8 (4). VLDB Endowment: 401–12.</p>
+</div>
 <div id="ref-a-m-b-r-o-s-i-a-providing-performant-virtual-resiliency-for-distributed-applications">
 <p>Goldstein, Jonathan, Mike Barnett, Sebastian Burckhardt, Badrish Chandramouli, Darren Gehring, Umar Farooq Minhas, Rahee Ghosh Peshawaria, and Irene Zhang. 2018. “A.M.B.R.O.S.I.A: Providing Performant Virtual Resiliency for Distributed Applications.” Microsoft. <a href="https://www.microsoft.com/en-us/research/publication/a-m-b-r-o-s-i-a-providing-performant-virtual-resiliency-for-distributed-applications/" class="uri">https://www.microsoft.com/en-us/research/publication/a-m-b-r-o-s-i-a-providing-performant-virtual-resiliency-for-distributed-applications/</a>.</p>
 </div>
