--- a/_posts/2018-12-15-ambrosia.markdown
+++ b/_posts/2018-12-15-ambrosia.markdown
@@ -30,16 +30,18 @@ _This is one post in a series about programming models and languages for distrib
 <li><p>Sequence numbers are used to deduplicate messages and recover from partial failure that leaves the system in an inconsistent state.</p></li>
 </ul>
 <p>This technique is expensive, as it requires many round-trips to storage and requires code for dealing with the deduplication of messages, idempotent processing of these messages, and recovering from partial failure. The combination of at-least-once delivery with idempotent processing achieves application “exactly-once” semantics, even under failure.</p>
+<p>So, how can we achieve exactly-once processing without sacrificing performance when building our distributed applications?</p>
 <h3 id="virtual-resiliency">Virtual Resiliency</h3>
 <p>The technique behind Ambrosia is called “virtual resiliency”.</p>
 <blockquote>
 <p>“Virtual resiliency - a mechanism in a (possibly distributed) programming and execution environment, typically employing a log, which exploits the replayably deterministic nature and serializilbility of an application to automatically mask failure.”</p>
 </blockquote>
-<p>The intuition is the following: all of the messages are durably logged as they are sent and received by participants in the system – these messages are the request and response pairs of RPC messages made between processes in the distributed system. If the callee happens to fail, the request is replayed until acknowledged by the system. To reduce the size of the log, periodically a checkpoint is taken – the log position and the application state – which reduces the amount of the log that needs to be replayed under failure, and reclaims space. These logs are transmitted to active standby’s that also process the log and are ready to take over under failure.</p>
-<p>The trick to enabling all of this is ensuring the deterministic replayability of the application code: under failure, when standby nodes take over and replay the log, this log may be replayed an arbitrary amount of times before the system recovers. Therefore, application code must be deterministic: under replay, the same events must happen, in the same order.</p>
+<p>The intuition is the following: all of the messages are durably logged as they are sent and received by participants in the system – these messages are the request and response pairs of RPC messages made between processes in the distributed system. If the callee of an RPC happens to fail, the request is replayed until acknowledged by the calle to the caller, after processing.</p>
+<p>The log must be durable, and rpelicated to remain highly-available – this can be done using something like Azure Files, or any other high-performance durable distributed log. To reduce the size of the log, periodically a checkpoint is taken – the log position and the application state together – which reduces the amount of the log that needs to be replayed under failure, and reclaims space. These logs are transmitted to active standby instances that also process the log and are ready to take over under failure. Each of these standby instances races to lock the log to determine who is the leader – or the active node.</p>
+<p>The trick to enabling all of this is ensuring the deterministic replayability of the application code: under failure, when standby nodes take over and replay the log, this log may be replayed an arbitrary amount of times before the system recovers. <strong>Therefore, application code must be deterministic:</strong> under replay, the same events must happen, in the same order.</p>
 <h3 id="impulses">Impulses</h3>
 <p>One of the challenges around this is related to events that are inherently nondeterministic.</p>
-<p>For instance, what happens if application code needs to talk to external storage or interact with the timer?</p>
+<p>For instance, what happens if application code needs to talk to external storage or interact with the clock, interact with the user, etc?</p>
 <p>Ambrosia provides a novel technique here called impulses: nondeterministic actions are “determinized” by first inserting their effect into their own log (effectively, a self RPC) before acting on them. In the case of retrieving the current time, Ambrosia can log a self-RPC that access the clock and stores the result of accessing the clock. Under replay, if a value has been stored, it will reuse that value, if not (because of a crash prior to completion), it will use at-least-once to replay the command and log the resulting value which would be used under future replays and replication to active standbys.</p>
 <h2 id="high-performance">High Performance</h2>
 <p>To achieve high performance, a combination of adaptive batching – which ensures low latency under both light and heavy workloads is used for message transmission between nodes. These batches are accumulated in buffers that are concurrently written to and flushed using a shared buffer pool – both techniques seen in high-performance systems such as Trill and Quill. Batch commit is used to deliver applications to both the log and application for processing from the system itself to keep latency low.</p>
