--- a/_posts/2020-07-07-diet.markdown
+++ b/_posts/2020-07-07-diet.markdown
@@ -11,14 +11,18 @@ SyncFree project which brought me to many different cities -- all cities where u
 researchers out to a fun night at a fancy restaurant in whatever city we happened to be in for that meeting.  I soon became obsessed
 with the foodie culture.  
 
-In 2015, while was working remote for Basho Technologies from Rhode Island -- actually living in Paris in Montmarte  --I became obsessed.  During that 
-time I dine with friends and colleagues at all the top restaurants, Le 52, Le Arpege, Le Chateaubraind, etc., burning all of the available 
-cash that I had at the time; I couldn't get enough.  I quit my industry job as a programmer and thought, shit, I could move to Paris, 
-do a Ph.D. over the next three years, and then become (possibly a post-doc and then) a professor here.  I had prelimimnary talks with CNRS 
-and INRIA and set the plans in motion.
+In 2015, while I was working remote for Basho Technologies from Rhode Island
+-- actually living in Paris in Montmarte -- I became obsessed. During that
+time I had the opportuity to dine with friends, colleagues, and family at all
+the top restaurants, Le 52, Le Arpege, Le Chateaubraind, etc., burning all of
+the available cash that I had at the time on food; I couldn't get enough. I
+quit my industry job as a programmer and thought, shit, I could move to
+Paris, do a Ph.D. over the next three years, and then become (possibly a
+post-doc and then) a professor here. I had prelimimnary talks with CNRS and
+INRIA and set the plans in motion.  The best laid plans of mice and men often go astray, right?
 
-Well, that didn't work out, because starting my Ph.D. in Paris would require a Master's, which I didn't have.  INRIA told me that they would,
-in part with Universite Pierre and Marie Curie (UPMC), grant me a complimentary master's if I could pass a preliminary exam, which was 
+Starting my Ph.D. in Paris would require a Master's degree which I didn't have.  INRIA told me that they would,
+in part with Universite Pierre and Marie Curie (UPMC), grant me a complimentary master's if I could pass a preliminary exam which was 
 partially in French -- my French was cafe French, far from fluent -- so I declined.  I instead opted for joining one of 
 the universities that was part of our research consortium that would get me my European Ph.D. and allow me to progress further.  This is a
 much longer story, by landed me in Brussels with a year in Lisbon, before I would have my Ph.D.
