--- a/_posts/2020-07-07-diet.markdown
+++ b/_posts/2020-07-07-diet.markdown
@@ -7,7 +7,7 @@ categories:
 
 Before starting my Ph.D., I became a bit of a foodie.  I was working as a reasearch engineer at Basho Technologies on the 
 SyncFree project which brought me to many different cities -- all cities where univerities who were participating in our program were in 
--- but, that was not my first time to Europe.  During this time, we always planned a night out where we would take all of the
+-- but, that was not my first time to Europe experiencing the cuisine.  During this time, we always planned a night out where we would take all of the
 researchers out to a fun night at a fancy restaurant in whatever city we happened to be in for that meeting.  I soon became obsessed
 with the foodie culture.  
 
@@ -28,7 +28,7 @@ the universities that was part of our research consortium that would get me my E
 much longer story, by landed me in Brussels with a year in Lisbon, before I would have my Ph.D.
 
 In Belgium, I spent hours upon hours deep in Belgium culture -- by this, I mean, drinking intense beer, eating waffles every time I was at the 
-train station, eating pasta, moules fretes, and sandwichches doused in andalouse sauce.  Meanwhile, I was living in a small dorm, by myself,
+train station, eating pasta, moules frites, and sandwichches doused in their Andalouse sauce (btw: what the hell is andalouse sauce, it only exists in Amsterdam and Belgium).  Meanwhile, I was living in a small dorm, by myself,
 not realizing that my insane depression and long hours of work were tied to my diet.  I ate a ton of dairy, as the Phildelphia sandwich
 (cream cheese on bread with smoked salmon) I ate frequently was a known a problem -- I was lactose intolerant before I arrived -- but I took
 some dairy pills and just shrugged it off.  
