Fix broken link

--- a/_posts/2020-12-08-agile.markdown
+++ b/_posts/2020-12-08-agile.markdown
@@ -98,7 +98,7 @@ So, what did we learn after four recitations of this in the Fall 2020 semester, 
 
 Here's a final result:
 
-![Goldilocks](Goldilocks.png)
+<img src="/img/goldilocks.png">
 
 ## Conclusion
 
