--- a/_posts/2020-12-08-agile.markdown
+++ b/_posts/2020-12-08-agile.markdown
@@ -32,7 +32,7 @@ So, what can we do the simulate the same type of learning in the online environm
 
 ## Goldilocks Story as the Agile Prompt
 
-This year, we tried something different.  Adapting material from Mark Levison about running a comic-book creation activity to teach agile, we set out to teach agile using the same comic-book story, but completely online.  Mark runs a cool activity where students of agile are taught to learn agile by building a comic book version of the Goldilocks and the Three Bears story on paper in his classes, but I decided it would be fun to try to do it in the online format, using Google Slides, by building a one-page emoji-based comic.  This idea was influenced by the fact that I had observed our students enjoyed reacting and telling stories in class using just emoji -- as well as the fact that writing a story with pure emoji was both a fun challenge and a way to bring students creativity into the classroom.  
+This year, we tried something different.  Adapting material from [Mark Levison](https://agilepainrelief.com/blog/learning-scrum-through-games-golidocks-iteration-ii.html#.U5vZlihSMdk) about running a comic-book creation activity to teach agile, we set out to teach agile using the same comic-book story, but completely online.  Mark runs a cool activity where students of agile are taught to learn agile by building a comic book version of the Goldilocks and the Three Bears story on paper in his classes, but I decided it would be fun to try to do it in the online format, using Google Slides, by building a one-page emoji-based comic.  This idea was influenced by the fact that I had observed our students enjoyed reacting and telling stories in class using just emoji -- as well as the fact that writing a story with pure emoji was both a fun challenge and a way to bring students creativity into the classroom.  
 
 We started by prompting students two days ahead of the recitation to revisit (or visit for the first time) the story of Goldilocks and the Three Bears.  
 
