--- a/_posts/2020-12-08-agile.markdown
+++ b/_posts/2020-12-08-agile.markdown
@@ -57,6 +57,7 @@ As you can see, the product backlog is purposely designed to introduce potential
 
 Then, I assigned a time table for the 50 minute slot and how the time should be broken down.  I include it below.
 
+| Time | Activity |
 | 00 | Class arrives, introduction, split into recitation groups. | 
 | --- | :-: |
 |    | *Start* |
