--- a/_posts/2021-03-09-food-part-1.markdown
+++ b/_posts/2021-03-09-food-part-1.markdown
@@ -45,12 +45,12 @@ with celiac disease develop IBS -- turns out, yup, I couldn't have onion,
 garlic, or any alliums. I cut them all out and I've been free of garlic and
 onion -- a very sad, sad life, in many ways -- since at least May of 2020.
 
-## Present Days
+## Present
 
 Until about late November, I thought I was feeling pretty good. 
 
-I was feeling significanly better than I had been previously. But, I knew
-something was still off. I was still getting sympotoms of something bothering
+I was feeling significanly better than I had been previously, but I knew
+something was still off. Something was still bothering
 me no matter how careful I was -- in many ways coronovirus quarantine has
 been a blessing, because now, I know that every time I feel sick, well I'm
 sick because of something *I* did, it's all my fault. Not to be disgusting,
