--- a/_posts/2021-03-09-food-part-1.markdown
+++ b/_posts/2021-03-09-food-part-1.markdown
@@ -51,9 +51,8 @@ Until about late November, I thought I was feeling pretty good.
 
 I was feeling significanly better than I had been previously, but I knew
 something was still off. Something was still bothering
-me no matter how careful I was -- in many ways coronovirus quarantine has
-been a blessing, because now, I know that every time I feel sick, well I'm
-sick because of something *I* did, it's all my fault. Not to be disgusting,
+me regardless of how careful I was. In fact, the coronovirus quarantine had
+been a blessing, as now I know that every time I feel sick, it's because of something *I* did: it's all my fault. Not to be disgusting,
 but anyone who's dealing with these issues knows that it's an alternating
 cycle of a week of constipation and then two to three days of horrific
 diarrhea combined with massive weight flucuations -- I've been tracking it
