--- a/_posts/2021-03-09-food-part-1.markdown
+++ b/_posts/2021-03-09-food-part-1.markdown
@@ -67,18 +67,18 @@ lives behind computer screens that disguise our sweatpants addictions.
 Recently, I decided I needed to get blood tested for food sensitivites
 because I knew something that I was eating was bothering me. I had
 suspicions: mornings that followed the days where I ate peanut butter were
-very bad; raw almonds made me 16-year-old-just-smoked-a-bowl nervous, mustard occasionally gave me like
-i-about-to-present-at-a-major-systems-conference level anxiety, and my latest
+very bad; raw almonds made me 16-year-old-just-smoked-a-bowl nervous, mustard occasionally gave me the
+i-m-about-to-present-at-a-major-systems-conference level anxiety, and my latest
 quarantine comfort food -- early evening cashewmilk ice cream during the
 Celtics basketball game -- gave me levels of heartburn and indigestion that
 kept me up all night resulting in not being able to work at all the following
 morning.
 
-My test results showed lots of new food sensitivities:
+My test results showed *lots of new food sensitivities* that I wasn't aware of:
 
-* class 3, the worst immune response was a list of foods that I knew would be bad: cow's milk, cashews, and egg -- egg, unexpected, considering I eat them every single morning and egg is in all of the gluten-free bread I eat.
-* class 2: cinnamon, almond, mustard, soy.
-* class 1: apple, asparagus, banana, beef, bell pepper, walnut, carrot, coconut, eggplant, ginger, pea, kelp, lamb, lima beans, mozzarella, orange, peanut, pineapple, tuna, mushroom, white potato
+* Class 3, the worst immune response was a list of foods that I knew would be bad: cow's milk, cashews, and egg -- egg, unexpected, considering I eat them every single morning and egg is in all of the gluten-free bread I eat.
+* Class 2: cinnamon, almond, mustard, soy.
+* Class 1: apple, asparagus, banana, beef, bell pepper, walnut, carrot, coconut, eggplant, ginger, pea, kelp, lamb, lima beans, mozzarella, orange, peanut, pineapple, tuna, mushroom, white potato
 
 I figured, well, OK.  I'll figure something out this week on how to address this.
 
