--- a/_posts/2021-03-09-food-part-1.markdown
+++ b/_posts/2021-03-09-food-part-1.markdown
@@ -74,7 +74,7 @@ Celtics basketball game -- gave me levels of heartburn and indigestion that
 kept me up all night resulting in not being able to work at all the following
 morning.
 
-My test results showed *lots of new food sensitivities* that I wasn't aware of:
+My test results showed *lots of new-to-me food sensitivities* that I wasn't aware of:
 
 * Class 3, the worst immune response was a list of foods that I knew would be bad: cow's milk, cashews, and egg -- egg, unexpected, considering I eat them every single morning and egg is in all of the gluten-free bread I eat.
 * Class 2: cinnamon, almond, mustard, soy.
