--- a/_posts/2021-03-09-food-part-1.markdown
+++ b/_posts/2021-03-09-food-part-1.markdown
@@ -78,9 +78,9 @@ My test results showed *lots of new-to-me food sensitivities* that I wasn't awar
 
 * Class 3, the worst immune response was a list of foods that I knew would be bad: cow's milk, cashews, and egg -- egg, unexpected, considering I eat them every single morning and egg is in all of the gluten-free bread I eat.
 * Class 2: cinnamon, almond, mustard, soy.
-* Class 1: apple, asparagus, banana, beef, bell pepper, walnut, carrot, coconut, eggplant, ginger, pea, kelp, lamb, lima beans, mozzarella, orange, peanut, pineapple, tuna, mushroom, white potato
+* Class 1: apple, asparagus, banana, beef, bell pepper, walnut, carrot, coconut, eggplant, ginger, pea, kelp, lamb, lima beans, mozzarella, orange, peanut, pineapple, tuna, mushroom, white potato.
 
-I figured, well, OK.  I'll figure something out this week on how to address this.
+This was last Thursday.  I figured, well, OK.  I'll figure something out this week on how to address this.  Adjusting a diet with a fridge full of food isn't cheap and I'm not one to let food go to waste.
 
 However, as I was finished lunch today, as I was trying to figure out what the hell I'm going to do about the diet, I sat back down at the computer and felt sluggish, tired, barely able to focus.  I thought about what I had eaten: gluten-free bread made with egg, mayo, peppers, and an apple, and potato chips.  No wonder I felt like shit, and now I'm gonna have to lay down for a few hours, work late, and probably wake up late.
 
