--- a/_posts/2021-03-09-food-part-1.markdown
+++ b/_posts/2021-03-09-food-part-1.markdown
@@ -82,7 +82,7 @@ My test results showed *lots of new-to-me food sensitivities* that I wasn't awar
 
 This was last Thursday.  I figured, well, OK.  I'll figure something out this week on how to address this.  Adjusting a diet with a fridge full of food isn't cheap and I'm not one to let food go to waste.
 
-However, as I finished lunch today, as I was trying to figure out what the hell I'm going to do about the diet, I sat back down at the computer and felt sluggish, tired, barely able to focus.  I thought about what I had eaten: gluten-free bread made with egg, mayo, peppers, and an apple, and potato chips.  No wonder I felt like shit, and now I'm gonna have to lay down for a few hours, work late, and probably wake up late.
+However, as I finished lunch today while trying to figure out what the hell I'm going to do about the diet, I sat back down at the computer and felt sluggish, tired, barely able to focus.  I thought about what I had eaten: gluten-free bread made with egg, mayo, peppers, and an apple, and potato chips.  No wonder I felt like shit, and now I'm gonna have to lay down for a few hours, work late, and probably wake up late.
 
 ## Where do we go?
 
